[metadata]
name = telegramTemplateMVC
version = 0.0.0
author = Niko Bolg
author_email = nkbolg@gmail.com

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    aiogram>=v3.1.1
    sqlalchemy>=2
    pydantic-settings

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    bot-run = main:main


[options.extras_require]
dev =
    flake8
    pylint
    pip-tools
    pylama
    black
    uvicorn[standard]
    ruff
    pytest

