[metadata]
name = pole4you_site_bot
version = 0.0.0
author = Niko Bolg
author_email = nkbolg@gmail.com

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    aiogram>=v3.13.1
    pydantic-settings
    redis[hiredis]

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    bot-run = main:main


[options.extras_require]
dev =
    flake8
    pylint
    pip-tools
    pylama
    black
    ruff

